@startuml
title Class Diagram for Inventory Lookup Exceptions
skinparam classAttributeIconSize 0
hide circle
top to bottom direction

class "Exception" as JavaException

class InventoryDockException {
  + InventoryDockException(message: String)
  + InventoryDockException(message: String, cause: Throwable)
}

class CategoryNotFoundException
class DuplicateItemException
class ItemNotFoundException

JavaException <|-- InventoryDockException
InventoryDockException <|-- CategoryNotFoundException
InventoryDockException <|-- DuplicateItemException
InventoryDockException <|-- ItemNotFoundException
@enduml
